--- a/addUser.html
+++ b/addUser.html
@@ -37,7 +37,7 @@
                 <input type="number" class="form-control" id="interes" name="interes" required>
             </div>
             <button type="submit" class="btn btn-primary">Agregar</button>
-            <a href="/" class="btn btn-secondary">Volver</a>
+            <a href="index.html" class="btn btn-secondary">Volver</a>
 
         </form>
     </div>
