--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div class="mt-3">
             <a class="btn btn-primary btn-block" href="addUser.html">Agregar Usuario</a>
             <a class="btn btn-secondary btn-block" href="listUsers.html">Ver Listado</a>
-            <!-- <a class="btn btn-success btn-block" href="/payments/add">Agregar Abono</a>
-            <a class="btn btn-warning btn-block" href="/users/modify">Modificar Usuarios</a>
-            <a class="btn btn-info btn-block" href="/options">Opciones</a>
-            <a class="btn btn-danger btn-block" href="/logout">Salir</a> -->
+            <a class="btn btn-success btn-block" href="addPayment.html">Administrar Usuarios</a>
+            <a class="btn btn-warning btn-block" href="modifyUser.html">Modificar Usuarios</a>
+            <a class="btn btn-info btn-block" href="opciones.html">Opciones</a>
+            <a class="btn btn-danger btn-block" href="index.html">Salir</a>
         </div>
     </div>
 
