--- a/listUsers.html
+++ b/listUsers.html
@@ -41,7 +41,7 @@
             </tbody>
         </table>
         <a href="/users/add" class="btn btn-primary">Agregar Usuario</a>
-        <a href="/" class="btn btn-secondary">Volver</a>
+        <a href="index.html" class="btn btn-secondary">Volver</a>
 
     </div>
 </body>
